<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="200"
        android:title="@string/sort_by">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_name_ask"
                    android:title="@string/sort_by_name_a_z" />
                <item
                    android:id="@+id/sort_name_desc"
                    android:title="@string/sort_by_name_z_a" />
                <item
                    android:id="@+id/sort_date_ask"
                    android:title="@string/sort_by_date_ask" />
                <item
                    android:id="@+id/sort_date_desc"
                    android:title="@string/sort_by_date_desc" />
            </group>
        </menu>
    </item>
</menu>
